<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_synthese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_synthese_text" />

        <Button
            android:id="@+id/button_recherche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_recherche_text"
            android:layout_marginStart="20dp" />

    </LinearLayout>

</LinearLayout>