<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SyntheseActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synthese_title"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invites_presents"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/category1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category1"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"/>

    <TextView
        android:id="@+id/category1_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintStart_toEndOf="@id/category1_name"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/category2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category2"
        app:layout_constraintTop_toBottomOf="@id/category1_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"/>

    <TextView
        android:id="@+id/category2_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/category1_count"
        app:layout_constraintStart_toEndOf="@id/category2_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/category3_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category3"
        app:layout_constraintTop_toBottomOf="@id/category2_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"/>

    <TextView
        android:id="@+id/category3_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/category2_count"
        app:layout_constraintStart_toEndOf="@id/category3_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/category4_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category4"
        app:layout_constraintTop_toBottomOf="@id/category3_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"/>

    <TextView
        android:id="@+id/category4_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/category3_count"
        app:layout_constraintStart_toEndOf="@id/category4_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/total_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/category4_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/total_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/category4_count"
        app:layout_constraintStart_toEndOf="@id/total_name"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>